# bnpm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  flake.nix  plugin.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.forgejo/workflows/: ci.yml  release.yml
binaryninja/: __init__.py  plugin.json
scripts/: create_forgejo_release.py
src/bnpm/: __init__.py  __main__.py  atomic.py  bundle.py  cli.py  config.py  dependencies.py  errors.py  fetch.py  hash.py  installed.py  installer.py  lockfile.py  manifest.py  models.py  packages.py  runtime.py  setup.py  source.py  status.py  store.py  sync.py  toml_compat.py  verify.py
src/bnpm/_binaryninja/: plugin_init.py
src/bnpm/cli/: __init__.py  __main__.py  add.py  command.py  common.py  list.py  main.py  parser.py  remove.py  setup.py  sync.py  update.py  verify.py
src/bnpm/helpers/: __init__.py  bn.py
src/bnpm/plugin_types/: legacy_python.py  pyproject.py
src/bnpm/runtime/: __init__.py  loader.py  logs.py  python.py  sync.py
src/bnpm/utils/: atomic.py  hash.py  locations.py  python_env.py  toml.py
src/bnpm_dev/: __init__.py  pack.py
tests/: helpers.py  test_bnpm.py  test_cli.py  test_fetch.py  test_lockfile.py  test_manifest.py  test_packages.py  test_python_env.py  test_runtime.py  test_setup.py  test_source.py  test_utils.py  test_verify.py
