[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnpm"
version = "0.1.0"
description = "A modern plugin manager for Binary Ninja."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Changeun Park", email = "g3un@protonmail.ch" },
]
dependencies = [
  "tomli>=1.1; python_version < '3.11'",
]

[project.scripts]
bnpm = "bnpm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bnpm"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/src/bnpm_dev",
]
