[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnpm"
version = "1.20260627.0"
description = "A plugin manager for Binary Ninja."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Changeun Park", email = "g3un@protonmail.ch" },
]

[project.scripts]
bnpm = "bnpm.cli:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bnpm"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
